VAlidaion de Campos Vacios

--- a/ProyectoGrupo/src/main/java/Package/DatosGenerales.form
+++ b/ProyectoGrupo/src/main/java/Package/DatosGenerales.form
@@ -117,6 +117,7 @@
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
               <ComponentRef name="btg_EstadoCivil"/>
             </Property>
+            <Property name="selected" type="boolean" value="true"/>
             <Property name="text" type="java.lang.String" value="Soltero"/>
           </Properties>
         </Component>
@@ -186,6 +187,7 @@
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
               <ComponentRef name="btg_TipoEmpleado"/>
             </Property>
+            <Property name="selected" type="boolean" value="true"/>
             <Property name="text" type="java.lang.String" value="Administrativo"/>
           </Properties>
         </Component>
@@ -239,6 +241,7 @@
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
               <ComponentRef name="btg_Genero"/>
             </Property>
+            <Property name="selected" type="boolean" value="true"/>
             <Property name="text" type="java.lang.String" value="Masculino"/>
           </Properties>
         </Component>
