--- a/ProyectoGrupo/src/main/java/Package/DatosGenerales.form
+++ b/ProyectoGrupo/src/main/java/Package/DatosGenerales.form
@@ -91,7 +91,7 @@
                       <Component id="rb_Casado" min="-2" max="-2" attributes="0"/>
                       <Component id="rb_Soltero" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="7" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
